# tdd_in_cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  tdd_in_cpp  tdd_in_cpp.cbp
src/: SondexTest.cpp  Soundex.h  SoundexTest.cpp
